# CodeforcesProblems

./: README.md
algorithm-template/: .autocp  1  CMakeLists.txt
algorithm-template/日常练习/C++Primer/7_classes/: notes
algorithm-template/日常练习/leetcode/: 1.cpp  1438.cpp  23.cpp  239.cpp  3589.cpp
algorithm-template/日常练习/模版/可持久化线段树/单点修改单点查询/: PersistentSegmentTree.cpp
algorithm-template/日常练习/模版/可持久化线段树/单点修改范围查询/: PersistentSegmentTree.cpp
algorithm-template/日常练习/牛客刷题笔记/20251225/: 1.cpp  2.cpp
algorithm-template/日常练习/羊蹄/: 1089e_KaosPower.cpp  917b_KaosPower.cpp  A_Bracket_Sequence.cpp  A_Clear_Symmetry.cpp  A_Cows_and_Sequence.cpp  A_Gennady_the_Dentist.cpp  A_Hashing_Trees.cpp  A_Magical_Boxes.cpp  A_Nicoleta_and_the_circle_of_kids.cpp  A_Partial_Teacher.cpp  A_Set_Theory.cpp  A_Substring_and_Subsequence.cpp  A_Variable_or_There_and_Back_Again.cpp  B2_EKG.cpp  B3_Military_Trainings.cpp  B_Bitwise_Formula.cpp  B_Colliders.cpp  B_Laser.cpp  B_Lucky_Number_2.cpp  B_Online_Meeting.cpp  B_Zero_Tree.cpp  B_Zoo.cpp  C2_Bessies_Birthday_Cake_Hard_Version.cpp  C_Anya_and_Smartphone.cpp  C_Average_Score.cpp  C_Balls_and_Boxes.cpp  C_Beauty_Pageant.cpp  C_Find_Pair.cpp  C_Foe_Pairs.cpp  C_Heap_Operations.cpp  C_How_Does_the_Rook_Move.cpp  C_Ivan_and_Powers_of_Two.cpp  C_MUH_and_House_of_Cards.cpp  C_Mittens.cpp  C_Multi_judge_Solving.cpp  C_Palindromic_Matrix.cpp  C_Terse_princess.cpp  C_Tourists_Notes.cpp  C_Trivial_Problem.cpp  C_Vasya_and_Basketball.cpp  (+36 more)
algorithm-template/日常练习/茶/: C_Cool_Partition.cpp  D_Fun.cpp
