cmake_minimum_required(VERSION 3.29)
project(algorithm_template)

set(CMAKE_CXX_STANDARD 26)

add_executable(algorithm_template main.cpp)

add_executable(1 日常练习/leetcode/1.cpp)
add_executable(23 日常练习/leetcode/23.cpp)
add_executable(C_Cool_Partition "日常练习/茶/C_Cool_Partition.cpp")
add_executable(239 日常练习/leetcode/239.cpp)
add_executable(1438 日常练习/leetcode/1438.cpp)
add_executable(3589 日常练习/leetcode/3589.cpp)
add_executable(B_MADMAX "日常练习/羊蹄/917b_KaosPower.cpp")
add_executable(1089e_KaosPower 日常练习/羊蹄/1089e_KaosPower.cpp)
add_executable(C_League_of_Leesins "日常练习/羊蹄/cf1225c_KaosPower.cpp")
add_executable(A_Arpas_loud_Owf_and_Mehrdads_evil_plan "日常练习/羊蹄/A_Arpas_loud_Owf_and_Mehrdads_evil_plan.cpp")
add_executable(D_Hyperdrive "日常练习/羊蹄/D_Hyperdrive.cpp")
add_executable(D_Climbing_the_Tree "日常练习/羊蹄/D_Climbing_the_Tree.cpp")
add_executable(G_Practice "日常练习/羊蹄/G_Practice.cpp")
add_executable(D2_The_Wall_medium "日常练习/羊蹄/D2_The_Wall_medium.cpp")
add_executable(C_Balls_and_Boxes "日常练习/羊蹄/C_Balls_and_Boxes.cpp")
add_executable(B_Zoo "日常练习/羊蹄/B_Zoo.cpp")
add_executable(B2_EKG "日常练习/羊蹄/B2_EKG.cpp")
add_executable(C_Ivan_and_Powers_of_Two "日常练习/羊蹄/C_Ivan_and_Powers_of_Two.cpp")
add_executable(J_Planting_Trees "日常练习/羊蹄/J_Planting_Trees.cpp")
add_executable(M_Mirror_Maze "日常练习/羊蹄/M_Mirror_Maze.cpp")
add_executable(A_Bracket_Sequence "日常练习/羊蹄/A_Bracket_Sequence.cpp")
add_executable(F_Chat_Screenshots "日常练习/羊蹄/F_Chat_Screenshots.cpp")
add_executable(C_Heap_Operations "日常练习/羊蹄/C_Heap_Operations.cpp")
add_executable(C_Vasya_and_Basketball "日常练习/羊蹄/C_Vasya_and_Basketball.cpp")
add_executable(D_Slimes "日常练习/羊蹄/D_Slimes.cpp")
add_executable(C_Mittens "日常练习/羊蹄/C_Mittens.cpp")
add_executable(C2_Bessies_Birthday_Cake_Hard_Version "日常练习/羊蹄/C2_Bessies_Birthday_Cake_Hard_Version.cpp")
add_executable(B3_Military_Trainings "日常练习/羊蹄/B3_Military_Trainings.cpp")
add_executable(F_Berland_Elections "日常练习/羊蹄/F_Berland_Elections.cpp")
add_executable(D_Castle "日常练习/羊蹄/D_Castle.cpp")
add_executable(C_Multi_judge_Solving "日常练习/羊蹄/C_Multi_judge_Solving.cpp")
add_executable(A_Gennady_the_Dentist "日常练习/羊蹄/A_Gennady_the_Dentist.cpp")
add_executable(B_Online_Meeting "日常练习/羊蹄/B_Online_Meeting.cpp")
add_executable(C_MUH_and_House_of_Cards "日常练习/羊蹄/C_MUH_and_House_of_Cards.cpp")
add_executable(A_Substring_and_Subsequence "日常练习/羊蹄/A_Substring_and_Subsequence.cpp")
add_executable(B_Colliders "日常练习/羊蹄/B_Colliders.cpp")
add_executable(C_Wonderful_Randomized_Sum "日常练习/羊蹄/C_Wonderful_Randomized_Sum.cpp")
add_executable(B_Zero_Tree "日常练习/羊蹄/B_Zero_Tree.cpp")
add_executable(A_Magical_Boxes "日常练习/羊蹄/A_Magical_Boxes.cpp")
add_executable(E_Yet_Another_Task_with_Queens "日常练习/羊蹄/E_Yet_Another_Task_with_Queens.cpp")
add_executable(A_Set_Theory "日常练习/羊蹄/A_Set_Theory.cpp")
add_executable(C_Beauty_Pageant "日常练习/羊蹄/C_Beauty_Pageant.cpp")
add_executable(C_Foe_Pairs "日常练习/羊蹄/C_Foe_Pairs.cpp")
add_executable(E_Bus_Number "日常练习/羊蹄/E_Bus_Number.cpp")
add_executable(D_Two_Strings_Swaps "日常练习/羊蹄/D_Two_Strings_Swaps.cpp")
add_executable(C_Terse_princess "日常练习/羊蹄/C_Terse_princess.cpp")
add_executable(A_Cows_and_Sequence "日常练习/羊蹄/A_Cows_and_Sequence.cpp")
add_executable(C_Anya_and_Smartphone "日常练习/羊蹄/C_Anya_and_Smartphone.cpp")
add_executable(A_Partial_Teacher "日常练习/羊蹄/A_Partial_Teacher.cpp")
add_executable(F_Rudolf_and_Imbalance "日常练习/羊蹄/F_Rudolf_and_Imbalance.cpp")
add_executable(C_Find_Pair "日常练习/羊蹄/C_Find_Pair.cpp")
add_executable(D_Hit_Ball "日常练习/羊蹄/D_Hit_Ball.cpp")
add_executable(C_How_Does_the_Rook_Move "日常练习/羊蹄/C_How_Does_the_Rook_Move.cpp")
add_executable(C_Tourists_Notes "日常练习/羊蹄/C_Tourists_Notes.cpp")
add_executable(B_Laser "日常练习/羊蹄/B_Laser.cpp")
add_executable(D1_Infinite_Sequence_Easy_Version "日常练习/羊蹄/D1_Infinite_Sequence_Easy_Version.cpp")
add_executable(D_Tandem_Repeats "日常练习/羊蹄/D_Tandem_Repeats.cpp")
add_executable(C_Palindromic_Matrix "日常练习/羊蹄/C_Palindromic_Matrix.cpp")
add_executable(A_Clear_Symmetry "日常练习/羊蹄/A_Clear_Symmetry.cpp")
add_executable(B_Bitwise_Formula "日常练习/羊蹄/B_Bitwise_Formula.cpp")
add_executable(B_Lucky_Number_2 "日常练习/羊蹄/B_Lucky_Number_2.cpp")
add_executable(A_Variable_or_There_and_Back_Again "日常练习/羊蹄/A_Variable_or_There_and_Back_Again.cpp")
add_executable(C_Average_Score "日常练习/羊蹄/C_Average_Score.cpp")
add_executable(A_Hashing_Trees "日常练习/羊蹄/A_Hashing_Trees.cpp")
add_executable(E_Correct_Bracket_Sequence_Editor "日常练习/羊蹄/E_Correct_Bracket_Sequence_Editor.cpp")
add_executable(G_Guess_Permutation "日常练习/羊蹄/G_Guess_Permutation.cpp")
add_executable(A_Nicoleta_and_the_circle_of_kids "日常练习/羊蹄/A_Nicoleta_and_the_circle_of_kids.cpp")
add_executable(E_Text_Editor "日常练习/羊蹄/E_Text_Editor.cpp")
add_executable(I_Interactivity "日常练习/羊蹄/I_Interactivity.cpp")
add_executable(H_Wanna_win_Solve "日常练习/羊蹄/H_Wanna_win_Solve.cpp")
add_executable(H_Expected_Value_Of_Function "日常练习/羊蹄/H_Expected_Value_Of_Function.cpp")
add_executable(M_Mouse_Trap "日常练习/羊蹄/M_Mouse_Trap.cpp")
add_executable(D_Divisibility_Trick "日常练习/羊蹄/D_Divisibility_Trick.cpp")
add_executable(J_Jesting_Jabberwocky "日常练习/羊蹄/J_Jesting_Jabberwocky.cpp")
add_executable(G_Cubes "日常练习/羊蹄/G_Cubes.cpp")
add_executable(D_Fun "日常练习/茶/D_Fun.cpp")
add_executable(K_King_of_the_Hill "日常练习/羊蹄/K_King_of_the_Hill.cpp")
add_executable(D_Fresh_Avocado "日常练习/羊蹄/D_Fresh_Avocado.cpp")
add_executable(D_Double_Deck "日常练习/羊蹄/D_Double_Deck.cpp")
add_executable(J_Desert_Travel "日常练习/羊蹄/J_Desert_Travel.cpp")
add_executable(C_Trivial_Problem "日常练习/羊蹄/C_Trivial_Problem.cpp")
add_executable(J_Characters_Shift "日常练习/羊蹄/J_Characters_Shift.cpp")
add_executable(I_Map_Coloring "日常练习/羊蹄/I_Map_Coloring.cpp")